
Thu Dec 18 23:46:11 CST 1997 Shawn T. Amundson <amundson@gimp.org>

	* Changes from Bolliet Jerome <bolliet@in2p3.fr> to gtktree.
          Corrects a bug in gtk_tree_remove_items and gtk_tree_item_destroy.
          Adds the possibility to connect all items by lines. This is the 
          default now.  You can overide this with the function 
          gtk_tree_set_view_line which take a tree and a boolean.

Thu Dec 18 23:26:49 CST 1997 Shawn T. Amundson <amundson@gimp.org>

	* removed configure, Makefile.in, and aclocal.m4 files

Wed Dec 17 23:36:57 1997  Scott Goehring  <scott@poverty.bloomington.in.us>

	* gdk/gdkcc.c (gdk_color_context_free): Caught a stray
	gdk_colormap_destroy that Owen missed (and Shawn found).

Wed Dec 17 20:59:52 1997  Owen Taylor  <owt1@cornell.edu>
	* gdk/gdkinput.c gdk/gdkinput.h gdk/gdkinputcommon.h
	  gdk/gdkinputxfree.h gdk/gdkinputgxi.h gdk/gdkinputnone.h.
	  gtk/gtkinputdialog.h gtk/testinput.c
	Added support for device keys mapping to key events.
	Fixed various bugs.

Wed Dec 17 20:53:00 1997  Owen Taylor  <owt1@cornell.edu>
	* gdk/gdk.c gdk/gdk.h: Changed gdk_get_event to remove
	predicate filtering, and to allocate the events.
	Added gdk_event_get_graphics_expose for scroll handling.
	* gtk/gtkmain.c gtk/gtktext.c:
	Use above changes. Interface change for gtk_get_current_event.
	* testgtk.c
	Added another test to test new scrolling mechanism.s
	* gdk/gdk.c gdk/gdk.h gdk/gdkwindow.c gdk/gdkprivate.h: 
	Added beginnings of event filtering. Removed obsolte
	OtherEvent mechanism.
	* gdk/gdk.c: Combined FocusIn/FocusOut events. Now ignore
	focus events which aren't for window itself. (Only pay
	attention to NotifyAncestor/Inferior/Nonlinear)
	* gtk/gtkwindow.c gtk/gtkwindow.h: Virtualize set_focus 
	function so it can be overridden.
	* gtk/gtkwidget.c: Reparenting should now work for
	containers. (Guillaume Laurent <glaurent@worldnet.fr>)
	* gdk/gdkgc.c: By default, GraphicsExpose events are now
	_not_ generated.